<resources>
    <string name="app_name">AndroidProject</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="kwota">Kwota</string>
    <string name="kategoria">Kategoria</string>
    <string name="data_przychodu">Data przychodu</string>
    <string name="ustawienia">Ustawienia</string>
    <string name="dodaj_transakcje">Dodaj Transakcje</string>
    <string name="analiza_finansow">Analiza Finansów</string>
    <string name="analiza_finansowa">Analiza Finansowa</string>
    <string name="saldo_aktualne">Saldo aktualne:</string>
    <string name="wyswietl_wszystko">Wyświetl wszystko</string>
    <string name="saldo">2222,43 PLN</string>
    <string name="witaj_nazwa_uzytkownika">Witaj, {Nazwa}</string>
    <string name="nie_ma_zadnych_biezacych_transakcji">Nie ma żadnych bieżących transakcji.</string>
    <string name="ikona_przejscia_dalej">Ikona przejścia dalej</string>
    <string name="powrot_do_menu">Powrót do menu</string>
    <string name="dodaj">Dodaj</string>
    <string name="edytuj_transakcje">Edytuj transakcję</string>
    <string name="podaj_okres_rozliczeniowy_platnosci">Podaj okres rozliczeniowy płatności</string>
    <string name="czy_platnosc_cykliczna">Czy płatność cykliczna?</string>
    <string name="opcjonalny_opis">Opcjonalny opis</string>
    <string name="opis">Opis</string>
    <string name="wybierz_date">Wybierz datę</string>
    <string name="ikona_wyboru_daty">Ikona wyboru daty</string>
    <string name="data">Data</string>
    <string name="wpisz_kwote">Wpisz kwotę</string>
    <string name="dodaj_nowa_transakcje">Dodaj nową transakcję</string>
    <string name="zmien">Zmień</string>
    <string name="powiadomienia">Powiadomienia</string>
    <string name="limity_kategorii">Limity Kategorii</string>
    <string name="zmiana_kodu_pin">Zmiana Kodu PIN</string>
    <string name="ikona_zmiany_kodu_pin">Ikona zmiany kodu PIN</string>
    <string name="usu_konto">Usuń Konto</string>
    <string name="ikona_usuniecia_konta">Ikona usunięcia konta</string>
    <string name="zmiana_motywu">Zmiana Motywu</string>
    <string name="ikona_zmiany_motywu">Ikona zmiany motywu</string>
    <string name="transakcje">Transakcje</string>
    <string name="historia_limitow_kategorii">Historia Limitów Kategorii</string>
    <string name="powrot_do_ustawien">Powrót do ustawień</string>
    <string name="dodaj_nowa_kategorie">Dodaj nową kategorie</string>
    <string name="historia_transakcji">Historia transakcji</string>
    <string name="kategorie">Kategorie</string>
    <string name="analiza_budzetu">Analiza budżetu</string>
    <string name="witaj_w_finansapka">Witaj w finansApka</string>
    <string name="importuj_baze_danych">Importuj bazę danych</string>
    <string name="ikona_importu_bazy_danych">ikona importu bazy danych</string>
    <string name="eksportuj_baze_danych">Eksportuj bazę danych</string>

    <string-array name="security_questions">
        <item>Jakie jest imię twojego pierwszego zwierzaka?</item>
        <item>Jak nazywała się twoja pierwsza szkoła?</item>
        <item>Jaki jest twój ulubiony kolor?</item>
        <item>Jakie jest nazwisko twojego najlepszego przyjaciela z dzieciństwa?</item>
        <item>Jak nazywało się twoje pierwsze miejsce pracy?</item>
        <item>Jaka jest ulubiona potrawa twojej mamy?</item>
        <item>Jaka jest twoja ulubiona książka?</item>
        <item>Jakiej marki było twoje pierwsze auto?</item>
    </string-array>

</resources>