<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    android:background="@drawable/background_light">

    <TextView
        android:id="@+id/ustawieniaText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/googlesans_bold"
        android:text="@string/ustawienia"
        android:textColor="@color/black"
        android:textSize="40sp"
        android:textStyle="bold" />

    <ImageButton
        android:id="@+id/przejdzDoMenuButton"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:background="@android:color/transparent"
        android:src="@drawable/ic_close"
        android:contentDescription="@string/powrot_do_menu" />

    <!-- Kontener: Limity Kategorii -->
    <FrameLayout
        android:id="@+id/limityKategoriiContainer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/ustawieniaText"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/frame_with_border"
        android:padding="6dp">

        <ImageView
            android:id="@+id/wyswietlIcon"
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:layout_gravity="center_horizontal"
            android:src="@drawable/ic_limits"
            android:contentDescription="@string/ikona_przejscia_dalej" />

        <TextView
            android:id="@+id/wyswietlText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal|bottom"
            android:layout_marginTop="4dp"
            android:fontFamily="@font/google_sans_regular"
            android:gravity="center"
            android:text="@string/limity_kategorii"
            android:textColor="#757575"
            android:textSize="16sp"
            android:padding="4dp" />

        <Button
            android:id="@+id/limityKategoriiButton"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:background="@android:color/transparent"
            android:clickable="true"
            android:focusable="true" />
    </FrameLayout>



    <FrameLayout
        android:id="@+id/importBazyContainer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/limityKategoriiContainer"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:layout_marginTop="30dp"
        android:background="@drawable/frame_with_border"
        android:padding="6dp">

        <ImageView
            android:id="@+id/importBazyIcon"
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:layout_gravity="center_horizontal"
            android:src="@drawable/ic_import"
            android:contentDescription="@string/ikona_importu_bazy_danych" />

        <TextView
            android:id="@+id/importBazyDanychText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal|bottom"
            android:layout_marginTop="4dp"
            android:fontFamily="@font/google_sans_regular"
            android:gravity="center"
            android:text="@string/importuj_baze_danych"
            android:textColor="#757575"
            android:textSize="16sp"
            android:padding="4dp" />

        <Button
            android:id="@+id/importBazyDanychButton"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:background="@android:color/transparent"
            android:clickable="true"
            android:focusable="true" />
    </FrameLayout>

    <FrameLayout
        android:id="@+id/eksportBazyContainer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/importBazyContainer"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:layout_marginTop="30dp"
        android:background="@drawable/frame_with_border"
        android:padding="6dp">

        <ImageView
            android:id="@+id/eksportBazyIcon"
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:layout_gravity="center_horizontal"
            android:src="@drawable/ic_export"
            android:contentDescription="@string/ikona_zmiany_kodu_pin" />

        <TextView
            android:id="@+id/eksportBazyText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal|bottom"
            android:layout_marginTop="4dp"
            android:fontFamily="@font/google_sans_regular"
            android:gravity="center"
            android:text="@string/eksportuj_baze_danych"
            android:textColor="#757575"
            android:textSize="16sp"
            android:padding="4dp" />

        <Button
            android:id="@+id/eksportBazyButton"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:background="@android:color/transparent"
            android:clickable="true"
            android:focusable="true" />
    </FrameLayout>


    <!-- Zmiana Kodu PIN -->
    <!-- Zmiana Kodu PIN -->
    <FrameLayout
        android:id="@+id/zmianaKoduPinContainer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/eksportBazyContainer"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:layout_marginTop="30dp"
        android:layout_marginBottom="20dp"
        android:background="@drawable/frame_with_border"
        android:padding="6dp">

        <ImageView
            android:id="@+id/zmianaKoduPinIcon"
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:layout_gravity="center_horizontal"
            android:src="@drawable/ic_pin"
            android:contentDescription="@string/ikona_zmiany_kodu_pin" />

        <TextView
            android:id="@+id/zmianaKoduPinText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal|bottom"
            android:layout_marginTop="4dp"
            android:fontFamily="@font/google_sans_regular"
            android:gravity="center"
            android:text="@string/zmiana_kodu_pin"
            android:textColor="#757575"
            android:textSize="16sp"
            android:padding="4dp" />

        <Button
            android:id="@+id/zmianaKoduPinButton"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:background="@android:color/transparent"
            android:clickable="true"
            android:focusable="true" />
    </FrameLayout>

    <!-- Usuń Konto -->
    <FrameLayout
        android:id="@+id/usunKontoContainer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/zmianaKoduPinContainer"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:layout_marginTop="170dp"
        android:layout_marginBottom="20dp"
        android:background="@drawable/frame_with_border"
        android:padding="6dp">

        <ImageView
            android:id="@+id/usunKontoIcon"
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:layout_gravity="center_horizontal"
            android:src="@drawable/ic_delete"
            android:contentDescription="@string/ikona_usuniecia_konta" />

        <TextView
            android:id="@+id/usunKontoText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal|bottom"
            android:layout_marginTop="4dp"
            android:fontFamily="@font/google_sans_regular"
            android:gravity="center"
            android:text="@string/usu_konto"
            android:textColor="#757575"
            android:textSize="16sp"
            android:padding="4dp" />

        <Button
            android:id="@+id/usunKontoButton"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:background="@android:color/transparent"
            android:clickable="true"
            android:focusable="true" />
    </FrameLayout>

</RelativeLayout>
